--- a/css/main.css
+++ b/css/main.css
@@ -3667,7 +3667,7 @@ p {
 
 .qoutcomes__scroll {
   margin-top: 10px;
-  margin-left: -700px;
+  margin-left: -5000px;
   display: flex;
   align-items: center;
   width: 5021px;
@@ -3939,6 +3939,10 @@ p {
   margin-top: 76px;
 }
 
+.footer__button {
+  color: #000;
+}
+
 .footer__nav {
   margin-left: 210px;
 }
@@ -4008,7 +4012,7 @@ p {
 @media (max-width: 700px) {
   .footer-ill {
     position: absolute;
-    top: 120px;
+    top: 180px;
     right: 70px;
     width: 53px;
     height: 53px;
